# S3M2P

./: .claude_prompt  .claude_prompt_exec  .claude_prompt_replanning  .gitignore  CLAUDE.md  Caddyfile  Cargo.toml  DEPLOYMENT.md  FIELD_MANUAL.md  Makefile  VISION.md  WORKFLOW.md  coverage_full.txt  deny.toml  package-lock.json  package.json  playwright.config.ts  run_agent.sh
.claude/: settings.json
.claude/agents/: executor.md  planner.md
.claude/commands/: context.md  pr.md  status.md  validate.md  work.md
.github/ISSUE_TEMPLATE/: autocrate.yml  blog.yml  bug.yml  chladni.yml  config.yml  core.yml  feature.yml  helios.yml  infra.yml  ml.yml  portfolio.yml  storage-server.yml  too-foo.yml  welcome.yml
.obsidian/: workspace.json
ARCH/: Cargo.toml  index.html
BLOG/: Cargo.toml
COMING_SOON/: index.html  run_tests.sh  test_sim.js  test_transient.js  test_wave_sim.js
DNA/: Cargo.toml
HELIOS/: Cargo.toml  Trunk.toml  build.rs
LEARN/: CLAUDE.md  Cargo.toml  index.html
PROJECT_N/: Cargo.toml
SCRIPTS/: config.sh  deploy.sh  dev  dev-menu.sh  dev-serve.sh  dev-session.sh  install-aliases.sh  install-simple-aliases.sh  install-zellij-aliases.sh  keep-alive.sh  run-completion.bash  run.sh  serve-all.sh  setup-hosts-local.sh  setup-hosts.sh  setup-local-dns.sh  setup-preview-dns.sh  setup.sh  simple-dev.sh  start-dev-env.sh  test.sh  test_coverage.sh  validate.sh  web.sh  work-on-issue.sh  worktree.sh  zellij-session.sh
SHIVAM/: Cargo.toml
WELCOME/: CLAUDE.md  Cargo.toml  index.html  watch_tree.sh
antimony-core/: Cargo.toml
autocrate/: Cargo.toml
helios/: Cargo.toml  Trunk.toml  index.html
portfolio/: Cargo.toml
scripts/: deploy.sh  worktree.sh
simulation-cli/: Cargo.toml
storage-server/: Cargo.toml
tests/: visual.spec.ts
too.foo/: Cargo.toml  Trunk.toml  index.html
too.foo/src/: fungal.rs  main.rs
(+256 files in other folders)
