[workspace]
resolver = "2"
members = [
    # DNA - Core algorithms + infrastructure
    "DNA",
    "DNA/SIMULATION_CLI",
    "DNA/STORAGE_SERVER",
    "DNA/CLAUDE_AUTOMATION",

    # L1 Bubbles (deployed)
    "WELCOME",
    "HELIOS",
    "BLOG",

    # Simulations (L2 under Simulations bubble)
    "SIMULATIONS/CHLADNI",
    "SIMULATIONS/POWERLAW",

    # Tools (L2 under Tools bubble)
    "TOOLS/SENSORS",
    "TOOLS/AUTOCRATE",
    "TOOLS/CRM",
    "TOOLS/PLL",
    "TOOLS/POWER_CIRCUITS",

    # Learn (L2 under Learn bubble)
    "LEARN/AI",
    "LEARN/UBUNTU",
    "LEARN/OPENCV",
    "LEARN/ARDUINO",
    "LEARN/ESP32",
    "LEARN/SWARM_ROBOTICS",
    "LEARN/SLAM",
]
# Excluded - different build targets/dependencies
exclude = ["HW/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
glam = { version = "0.29", features = ["rand"] }
rand = "0.8"
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = "=0.2.93"
web-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dna = { path = "DNA" }

# GPU compute (for CFD, FEA, Thermal)
wgpu = "22.1"

[workspace.lints.rust]
unsafe_code = "warn"

[workspace.lints.clippy]
all = "warn"
