[package]
name = "too-foo"
version = "0.1.0"
edition = "2021"

[dependencies]
antimony-core = { path = "../antimony-core" }
glam = { version = "0.29", features = ["rand"] }
wasm-bindgen = "=0.2.93"
console_error_panic_hook = "0.1"

[dependencies.web-sys]
version = "0.3"
features = [
    "CanvasRenderingContext2d",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "HtmlElement",
    "Location",
    "Window",
    "AnimationEvent",
    "console",
    "HtmlCollection",
    "DomRect",
    "Performance",
]
